--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>D3 Page Template</title>
+    <title>Atividade Vis D3</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
     <body>
